# Scrabble

./: README.md  config.properties  diccionario.txt
ClienteSv/: CMakeLists.txt  Cliente.cpp  Cliente.h  Nodo.cpp  Nodo.h  main.cpp
ScrabbleProyServ/: CMakeLists.txt  cliente.cpp  clienteS.html  main.cpp
ServidorCliente/: CMakeLists.txt  Cliente.h  LibreriaCodes.cpp  LibreriaCodes.h  Servidor.cpp  Servidor.h  agregarJugador.cpp  agregarJugador.h  jugador.cpp  jugador.h  main.cpp  modificadorJson.cpp  modificadorJson.h
ServidorCliente/Cliente/: Cliente.h  main.cpp
Socket_Cliente/: CMakeLists.txt  main.cpp
build-scrabble-Desktop_Qt_5_13_0_GCC_64bit-Debug/: Makefile  moc_ficha.cpp  moc_tablero.cpp  qrc_imagenes.cpp
scrabble/: adjacent.cpp  adjacent.h  adyacente.cpp  adyacente.h  bolsa.cpp  bolsa.cpp.autosave  bolsa.h  boton.cpp  boton.h  botonpuntaje.cpp  botonpuntaje.h  cliente.cpp  cliente.h  cola.cpp  cola.h  colanodo.cpp  colanodo.h  comodin.cpp  comodin.h  ficha.cpp  ficha.h  ficha.h.autosave  jugador.cpp  jugador.h  lector.cpp  lector.h  lista.cpp  lista.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  modificadorjson.cpp  modificadorjson.h  nodo.cpp  nodo.h  nodo.h.autosave  palabra.cpp  palabra.cpp.autosave  (+34 more)
server/: CMakeLists.txt  LibreriaCodes.cpp  LibreriaCodes.h  Servidor.cpp  Servidor.h  adjacent.cpp  adjacent.h  bolsa.cpp  bolsa.h  comunicacion.cpp  comunicacion.h  ficha.cpp  ficha.h  jugador.cpp  jugador.h  lista.cpp  lista.h  nodo.cpp  nodo.h  palabra.cpp  palabra.h  tablero.cpp  tablero.h
(+1 files in other folders)
